// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<TouchableWithoutFeedback
  delayLongPress={500}
  onPress={[MockFunction]}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#efefef",
        "flex": 1,
        "flexDirection": "row",
        "marginLeft": 0,
        "paddingBottom": 5,
        "paddingTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 40,
          "justifyContent": "center",
          "paddingLeft": 7,
          "width": 50,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#eee",
            "borderRadius": 3,
            "borderWidth": 2,
            "flex": 1,
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      >
        <DefaultFont
          style={
            Object {
              "color": "#000",
              "fontSize": 14,
              "fontWeight": "bold",
              "textAlign": "center",
              "textAlignVertical": "center",
            }
          }
        >
          16X
        </DefaultFont>
        <MaterialIcon
          color="#000"
          name="directions-bus"
          size={15}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
          "paddingLeft": 10,
        }
      }
    >
      <DefaultFont
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        Högsbo
      </DefaultFont>
      <DefaultFont
        style={
          Object {
            "fontSize": 12,
            "marginTop": -5,
          }
        }
      >
        via Centralstationen
      </DefaultFont>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <DefaultFont>
          Läge 
          A
        </DefaultFont>
        <MaterialIcon
          name="accessible"
          size={13}
          style={
            Object {
              "alignSelf": "center",
              "marginLeft": 5,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 50,
          "justifyContent": "center",
          "marginRight": 5,
          "width": 56,
        }
      }
    >
      <DefaultFont
        style={
          Object {
            "color": "#000",
            "fontSize": 18,
          }
        }
      >
        16:00
      </DefaultFont>
      <DefaultFont
        style={
          Object {
            "fontSize": 12,
          }
        }
      >
        16:05
      </DefaultFont>
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`should match snapshot 2`] = `
<TouchableWithoutFeedback
  delayLongPress={500}
  onPress={[MockFunction]}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "flex": 1,
        "flexDirection": "row",
        "marginLeft": 0,
        "paddingBottom": 5,
        "paddingTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 40,
          "justifyContent": "center",
          "paddingLeft": 7,
          "width": 50,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#eee",
            "borderRadius": 3,
            "borderWidth": 2,
            "flex": 1,
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      >
        <DefaultFont
          style={
            Object {
              "color": "#000",
              "fontSize": 10,
              "fontWeight": "bold",
              "textAlign": "center",
              "textAlignVertical": "center",
            }
          }
        >
          SVART
        </DefaultFont>
        <MaterialIcon
          color="#000"
          name="directions-boat"
          size={15}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
          "paddingLeft": 10,
        }
      }
    >
      <DefaultFont
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        Högsbo
      </DefaultFont>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <DefaultFont>
          Läge 
          A
        </DefaultFont>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 50,
          "justifyContent": "center",
          "marginRight": 5,
          "width": 56,
        }
      }
    >
      <DefaultFont
        style={
          Object {
            "color": "#FF6961",
            "fontSize": 18,
          }
        }
      >
        16:00
      </DefaultFont>
      <DefaultFont
        style={
          Object {
            "fontSize": 12,
          }
        }
      >
        16:05
      </DefaultFont>
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`should match snapshot 3`] = `
<TouchableWithoutFeedback
  delayLongPress={500}
  onPress={[MockFunction]}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#efefef",
        "flex": 1,
        "flexDirection": "row",
        "marginLeft": 0,
        "paddingBottom": 5,
        "paddingTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 40,
          "justifyContent": "center",
          "paddingLeft": 7,
          "width": 50,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#eee",
            "borderRadius": 3,
            "borderWidth": 2,
            "flex": 1,
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      >
        <DefaultFont
          style={
            Object {
              "color": "#000",
              "fontSize": 14,
              "fontWeight": "bold",
              "textAlign": "center",
              "textAlignVertical": "center",
            }
          }
        >
          1
        </DefaultFont>
        <MaterialIcon
          color="#000"
          name="train"
          size={15}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
          "paddingLeft": 10,
        }
      }
    >
      <DefaultFont
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        Centralstationen
      </DefaultFont>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <DefaultFont>
          Läge 
          A
        </DefaultFont>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 50,
          "justifyContent": "center",
          "marginRight": 5,
          "width": 56,
        }
      }
    >
      <DefaultFont
        style={
          Object {
            "color": "#FFB347",
            "fontSize": 14,
          }
        }
      >
        0h 0m
      </DefaultFont>
      <DefaultFont
        style={
          Object {
            "fontSize": 12,
          }
        }
      >
        8
      </DefaultFont>
    </View>
  </View>
</TouchableWithoutFeedback>
`;
